Tue, 08 Apr 2008 10:54:01 +0200 <thp@perli.net>
Updated Spanish translation

	* data/po/es.po: Updated Spanish translation from Julio Acuña

Mon, 07 Apr 2008 23:06:53 +0200 <thp@perli.net>
Makre sure we can re-set the locale after changing it

	* src/gpodder/util.py: Make sure we can re-set the locale after
	changing it, and if we cannot, only print a warning, but don't throw
	the exception outside of the function

Mon, 07 Apr 2008 23:05:05 +0200 <thp@perli.net>
Add 64x64 icon for Maemo's main menu and install it

	* data/icons/64/gpodder.png: Added
	* setup.py: Install the 64x64 icon in share/icons/hicolor

Mon, 07 Apr 2008 11:47:12 +0200 <thp@perli.net>
Install "pixmaps" icon on Maemo, too

	* setup.py: Make sure we also install the "/usr/share/pixmaps/"
	version of the gPodder icon on Maemo (for the task navigator)

Mon, 07 Apr 2008 11:24:54 +0200 <thp@perli.net>
Fix problems with the tray icon emblems

	* src/gpodder/trayicon.py: Fix emblem drawing code for non-square
	icons; use the "refresh" icon for feed updates and "multimedia-player"
	icon for the iPod/MP3 player sync status emblem

Sun, 06 Apr 2008 17:22:11 +0200 <thp@perli.net>
Fix install Makefile bug; add donator; fix treeview header height

	* Makefile: Add "generators" dependency for the "install" target
	* src/gpodder/gui.py: Add Mark Alford (donator) to contributors list;
	remove the hard-coded header height offset for the treeview, because
	we don't need it anymore, because we hide the header (this is a good
	thing, because we don't need to rely on a theme-specific header
	height compared to what we did previously - one FIXME less :)

Sun, 06 Apr 2008 02:05:34 +0200 <thp@perli.net>
Initial upstream support for the Maemo platform (Nokia Internet Tablets)

	* bin/gpodder: Add "--maemo/-m" option to enable running as a Maemo
	application (this is only useful on Nokia Internet Tablets or in the
	Maemo SDK environment); determine interface type and set the correct